Updated modeling section with latest model information

--- a/final.ipynb
+++ b/final.ipynb
@@ -3124,7 +3124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e7639999",
    "metadata": {},
    "outputs": [],
@@ -3272,7 +3272,7 @@
    "source": [
     "### Random Forest Classifier\n",
     "\n",
-    "    To use the function we wrote, you must first create a dicitonary keyed with hyperparameters and a range of values for each. It will be used to find and return an optimized Random Forest Classifier model."
+    "    To use the function we wrote, you must first create a dictionary keyed with hyperparameters and a range of values for each. It will be used to find and return an optimized Random Forest Classifier model."
    ]
   },
   {
@@ -3319,10 +3319,10 @@
     "__Best Model Takeaways__\n",
     "\n",
     "    - Random Forest Classifier\n",
-    "    - Mean Cross-Validated Accuracy: 63.55%\n",
+    "    - Mean Cross-Validated Accuracy: 64.49%\n",
     "    - Outperformed Baseline by 12%\n",
-    "    - Max Depth: 7\n",
-    "    - Minimum Samples Per Leaf: 7"
+    "    - Max Depth: 9\n",
+    "    - Minimum Samples Per Leaf: 2"
    ]
   },
   {
@@ -3564,23 +3564,23 @@
    "source": [
     "### Conclusion\n",
     "\n",
-    "    Our random forest classifier model mean cross-validated accuracy was roughly 63% beating our baseline accuracy by 12%.\n",
+    "    Our random forest classifier model mean cross-validated accuracy was roughly 64% beating our baseline accuracy by 12%.\n",
     "    \n",
     "    Evaluating our best model on the test data set resulted in an accuracy of about 61%.\n",
     "    \n",
-    "    Our model confirmed that our original hypothesis of 'TeamWards' being the biggest driver of win rates was incorrect.  Our models feature importance concluded that 'BlueTeamGoldDifference' was the biggest driver in predicting win rates. \n",
+    "    Our model confirmed that our original hypothesis of 'TeamWards' being the biggest driver of win rates was incorrect.  Our model's feature importance concluded that 'BlueTeamTotalGoldDifference' was the biggest driver in predicting win rates. \n",
     "    \n",
     "    Our model identified the most important features as:\n",
     "        \n",
     "        'BlueTeamTotalGoldDifference'\n",
     "        'BlueTeamXpDifference'\n",
     "        'BlueTeamTotalDmgDifference'\n",
-    "        'BlueTeamKdaDifference'\n",
     "        'BlueTeamTotalMinionsMonstersDifference'\n",
+    "        'BlueTeamKdaDifference'\n",
     "        \n",
     "    If we had more time we would have liked to:\n",
     "    \n",
-    "        - run our model on non-pro games & see if 'BlueTeamGoldDifference' is still the biggest driver for predicting win rates\n",
+    "        - run our model on non-pro games & see if 'BlueTeamTotalGoldDifference' is still the biggest driver for predicting win rates\n",
     "        - dive deeper into what are the drivers for gaining towers\n",
     "        - engineer more features\n",
     "        - predict a winner at a much earlier time than 10 min into a game\n",
@@ -3667,7 +3667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
